@@ -573,6 +573,8 @@ General: cleaned up old tdOdd.png image from Default theme
 	Removed file /themes/Default/img/tdOdd.png
 	Edited file  /themes/Default/css/main.css
 
+Students: added ability to add/edit/delete notes for students who have not yet reached their start date
+	Edited files /modules/Students/student_view_details_notes_edit*.php, student_view_details_notes_add*.php, student_view_details_notes_delete*.php
 	
 v10.0.00
 --------
